--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -11,7 +11,7 @@
     </tr>
     <tr>
       <th><rtrong>配送先</rtrong></th>
-      <th><%= order.post_code %><%= order.address %><%= order.name %></th>
+      <th><%= @order.post_code %><%= @order.address %><%= @order.name %></th>
     </tr>
     <tr>
       <th><strong>支払方法</strong></th>
@@ -39,20 +39,16 @@
     </tr>
   </thread>
   <tbody>
-    <% order_details.each do |order_details| %>
-      <%= form_with model: [order, order_details], url: admin_order_order_detail_path(order, order_details) do |f| %>
+    <% @order.order_details.each do |order_detail| %>
         <tr class="align-items-center">
-          <td class="text-left"><%= order_details.item.name %></td>
-          <td><%= order_details.price_including_tax.to_s(:delimited) %></td>
-          <td><%= order_details.amount %></td>
-          <td><%= calculate_subtotal(order_details).to_s(:delimited) %></td>
-          <td><%= f.select :production_status, options_for_select(production_status_options(order_details)), class: "form-control" %></td>
-          <td>
-            <%= production_status_display(order_details) %>
-            <% if order_details.production_status == "waiting" || order_details.production_status == "producting" %>
-                <%= f.submit "更新", class: "btn btn-sm btn-success" %>
-              <% end %>
-          </td>
+          <td class="text-left"><%= order_detail.item.name %></td>
+          <td><%= order_detail.price %></td>
+          <td><%= order_detail.amount %></td>
+          <td><%= order_detail.price * order_detail.amount %></td>
+          <% @total += order_detail.price*order_detail.amount %>
+          <%= form_with model: order_detail, url: admin_order_detail_path(order_detail.id), method: :patch do |f| %>
+          <td><%= f.select :making_status, OrderDetail.making_statuses.keys.map {|k| [I18n.t("enums.order_detail.making_status.#{k}"), k]}, include_blank: "選択して下さい" %></td>
+          <td><%= f.submit "更新", class: "btn btn-sm btn-success" %></td>
         </tr>
       <% end %>
     <% end %>
@@ -61,14 +57,14 @@
 <table class="table">
   <tr>
     <th>商品小計</th>
-    <tb><%= @order.postage + '円' %></tb>
+    <td><%= @total %>円</td>
   </tr>
   <tr>
     <th>送料</th>
-    <tb><%= @order.postage + '円' %></tb>
+    <td><%= @order.postage %>円</td>
   </tr>
   <tr>
     <th>請求金額合計</th>
-    <th><%= @order.postage %>円</th>
+    <th><%= @order.total_price %>円</th>
   </tr>
 </table>
